Resolve VCSWP-23775 (#83)
* Update SDK with latest spec changes

* Fix spec for TFN property in MessageResult

* Add changelog entry to SDK PR

* Update latest changelog entry date
