# models/TFNCampaign.ts
@@ -1,0 +1,166 @@
+/**
+ * FreeClimb API
+ * FreeClimb is a cloud-based application programming interface (API) that puts the power of the Vail platform in your hands. FreeClimb simplifies the process of creating applications that can use a full range of telephony features without requiring specialized or on-site telephony equipment. Using the FreeClimb REST API to write applications is easy! You have the option to use the language of your choice or hit the API directly. Your application can execute a command by issuing a RESTful request to the FreeClimb API. The base URL to send HTTP requests to the FreeClimb REST API is: /apiserver. FreeClimb authenticates and processes your request.
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: support@freeclimb.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { SMSTollFreeCampaignRegistrationStatus } from "./../models/SMSTollFreeCampaignRegistrationStatus";
+import { HttpFile } from "../http/http";
+
+interface AttributeType {
+  name: string;
+  baseName: string;
+  type: string;
+  format: string;
+  defaultValue: any;
+}
+interface ArgumentsType {
+  accountId: string;
+  campaignId: string;
+  useCase: string;
+  registrationStatus: SMSTollFreeCampaignRegistrationStatus;
+  dateCreated: string;
+  dateUpdated: string;
+  dateCreatedISO: string;
+  dateUpdatedISO: string;
+  revision: number;
+}
+export class TFNCampaign {
+  /**
+   * ID of the account that created this participant.
+   */
+  "accountId": string;
+  /**
+   * TFNCampaignId
+   */
+  "campaignId": string;
+  "useCase": string;
+  "registrationStatus": SMSTollFreeCampaignRegistrationStatus;
+  "dateCreated": string;
+  "dateUpdated": string;
+  "dateCreatedISO": string;
+  "dateUpdatedISO": string;
+  "revision": number;
+
+  static readonly discriminator: string | undefined = undefined;
+
+  static readonly attributeTypeMap: AttributeType[] = [
+    {
+      name: "accountId",
+      baseName: "accountId",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "campaignId",
+      baseName: "campaignId",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "useCase",
+      baseName: "useCase",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "registrationStatus",
+      baseName: "registrationStatus",
+      type: "SMSTollFreeCampaignRegistrationStatus",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "dateCreated",
+      baseName: "dateCreated",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "dateUpdated",
+      baseName: "dateUpdated",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "dateCreatedISO",
+      baseName: "dateCreatedISO",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "dateUpdatedISO",
+      baseName: "dateUpdatedISO",
+      type: "string",
+      format: "",
+
+      defaultValue: undefined,
+    },
+    {
+      name: "revision",
+      baseName: "revision",
+      type: "number",
+      format: "",
+
+      defaultValue: undefined,
+    },
+  ];
+
+  static getAttributeTypeMap(): AttributeType[] {
+    return TFNCampaign.attributeTypeMap;
+  }
+  public constructor(args: ArgumentsType) {
+    const assign = <T>(attribute: keyof ArgumentsType): T => {
+      return (args[attribute] ??
+        TFNCampaign.attributeTypeMap.find((attr) => attr.name === attribute)
+          ?.defaultValue) as T;
+    };
+    if (args["accountId"]) {
+      this["accountId"] = assign<string>("accountId");
+    }
+    if (args["campaignId"]) {
+      this["campaignId"] = assign<string>("campaignId");
+    }
+    if (args["useCase"]) {
+      this["useCase"] = assign<string>("useCase");
+    }
+    if (args["registrationStatus"]) {
+      this["registrationStatus"] =
+        assign<SMSTollFreeCampaignRegistrationStatus>("registrationStatus");
+    }
+    if (args["dateCreated"]) {
+      this["dateCreated"] = assign<string>("dateCreated");
+    }
+    if (args["dateUpdated"]) {
+      this["dateUpdated"] = assign<string>("dateUpdated");
+    }
+    if (args["dateCreatedISO"]) {
+      this["dateCreatedISO"] = assign<string>("dateCreatedISO");
+    }
+    if (args["dateUpdatedISO"]) {
+      this["dateUpdatedISO"] = assign<string>("dateUpdatedISO");
+    }
+    if (args["revision"]) {
+      this["revision"] = assign<number>("revision");
+    }
+  }
+}
